--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rxdux",
   "version": "1.0.0",
-  "description": "",
+  "description": "Yet another flux implementation based on redux with asynchronous reducer feature",
   "main": "./lib/index.js",
   "scripts": {
     "build": "babel src -d lib",
