change example package project name

--- a/examples/simple-generator/package.json
+++ b/examples/simple-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-observable",
+  "name": "simple-generator-example",
   "description": "",
   "private": true,
   "main": "index.js",
