--- a/examples/simple-promise/package.json
+++ b/examples/simple-promise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-observable",
+  "name": "simple-promise-example",
   "description": "",
   "private": true,
   "main": "index.js",
